testsuite/tests/grammar/invalid_lexers/token_action_3.lkt
import common

lexer foo_lexer {
    @text(bar=true) example <- "example"
}
